deploy/k8s/titanic-api/titanic-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: titanic-api
  name: titanic-api-service
  namespace: hcs
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: titanic-api
  type: NodePort
