deploy/k8s/titanic-api/titanic-api-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: titanic-api-ingress
  namespace: hcs
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "titanic-api-service"
spec:
  tls:
    - secretName: titanic-api-tls
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: titanic-api-service
              servicePort: 3000
